--- a/src/assets/scss/bootstrap/index.scss
+++ b/src/assets/scss/bootstrap/index.scss
@@ -12,3 +12,4 @@
 @import "~bootstrap/scss/buttons";
 @import "~bootstrap/scss/card";
 @import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/utilities/api";
